--- a/progetto-gustotram/package.json
+++ b/progetto-gustotram/package.json
@@ -9,6 +9,7 @@
     "lintfix": "npx prettier . --write && eslint ./src --fix"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
